--- a/apps/discography/templates/discography/album_detail.html
+++ b/apps/discography/templates/discography/album_detail.html
@@ -53,7 +53,7 @@
                                         <div class="jp-gui jp-interface">
                                             <div class="jp-controls">
                                                 <button class="jp-play" role="button" tabindex="0">play</button>
-                                                <button class="jp-pause" role="button" tabindex="0">asdf</button>
+{#                                                <button class="jp-pause" role="button" tabindex="0">asdf</button>#}
                                                 <button class="jp-stop" role="button" tabindex="0">stop</button>
                                             </div>
                                             <div class="jp-progress">
@@ -78,7 +78,7 @@
                                             </div>
                                         </div>
                                         <div class="jp-details">
-                                            <div class="jp-title" aria-label="title">adsf</div>
+                                            <div class="jp-title" aria-label="title"></div>
                                         </div>
                                     </div>
                                     <div class="jp-playlist">
